clusters/core-ci/gcsweb/gcsweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  replicas: 2
  selector:
    matchLabels:
      component: gcsweb
  template:
    metadata:
      labels:
        app: prow
        component: gcsweb
    spec:
      containers:
      - args:
        - -b
        - test-platform-results-public
        - -b
        - origin-federated-results
        - -b
        - prow-artifact-archive
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_gcsweb_latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
        name: gcsweb
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
          limits:
            cpu: 200m
            memory: 600Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.openshift.io/infrastructure: "true"
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    component: gcsweb
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 1h
  labels:
    app: gcsweb
  name: gcsweb
  namespace: ci
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gcsweb
